# polkadot-stack-template

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.eth-rpc  Dockerfile.node  INSTALL.md  README.md  TOOLS.md  chain_spec.json  deployments.json  docker-compose.yml  retrospective.md  statement-store.md
.github/workflows/: ci-audit.yml
blockchain/: Dockerfile  README.md  chain_spec.json  docker-compose.yml  zombienet.toml
blockchain/pallets/template/: Cargo.toml
blockchain/pallets/template/src/: lib.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
blockchain/runtime/src/configs/: mod.rs  xcm_config.rs
circuits/src/: digilocker-verifier-template.circom
circuits/src/helpers/: extractor.circom
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: chain.rs  contract.rs  mod.rs  pallet.rs
contracts/evm/: Counter.sol  hardhat.config.ts  package-lock.json  package.json
contracts/evm/contracts/: AnonDigiLocker.sol  MockAttestationRegistry.sol  PANAttester.sol  Verifier.sol
contracts/evm/contracts/interfaces/: IAnonDigiLocker.sol
contracts/evm/scripts/: check-attestation.ts  deploy.ts  verify-pan.ts
contracts/evm/test/: Counter.test.ts
contracts/ink/: Cargo.toml  lib.rs
contracts/pvm/: hardhat.config.ts  package-lock.json  package.json
contracts/pvm/contracts/: Counter.sol
contracts/pvm/scripts/: deploy.ts
contracts/pvm/test/: Counter.test.ts
docs/: INSTALL.md
scripts/: README.md  common.sh  deploy-paseo.sh  start-dev-with-contracts.sh  start-dev.sh  start-zombienet-all.sh  test-statement-store-smoke.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: generated.json
web/.papi/metadata/: stack_template.scale
web/src/: App.tsx  main.tsx
web/src/components/: ContractCounterPage.tsx  ContractProofOfExistencePage.tsx  FileDropZone.tsx
web/src/config/: deployments.ts  evm.ts  network.ts
web/src/hooks/: useAccount.ts  useChain.ts  useConnection.ts  useStatementStore.ts
web/src/pages/: AccountsPage.tsx  EvmContractPage.tsx  GenerateProofPage.tsx  HomePage.tsx  IndiaEventPage.tsx  PalletPage.tsx  PvmContractPage.tsx  StatementStorePage.tsx  VerifyProofPage.tsx
web/src/store/: chainStore.ts
