[workspace]
resolver = "2"
members = [
	"blockchain/runtime",
	"blockchain/pallets/template",
	"cli",
]

[workspace.package]
license = "MIT"
authors = ["Polkadot Stack Template Contributors"]
homepage = "https://github.com/parity-Asia/polkadot-stack-template"
repository = "https://github.com/parity-Asia/polkadot-stack-template.git"
edition = "2021"

[workspace.dependencies]
# Local crates
pallet-template = { path = "./blockchain/pallets/template", default-features = false }

# Common dependencies
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
docify = { version = "0.2.9" }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }

# Polkadot SDK
polkadot-sdk = { version = "2503.0.1", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }

# FRAME (experimental)
frame = { version = "0.9.1", default-features = false, package = "polkadot-sdk-frame" }

# CLI dependencies
subxt = { version = "0.38" }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
