[package]
name = "stack-cli"
description = "CLI tool for interacting with the Polkadot Stack Template chain via subxt."
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
subxt = { workspace = true }
subxt-signer = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
