[package]
name = "stack-cli"
description = "CLI tool for interacting with the Polkadot Stack Template chain via subxt."
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
subxt = "0.38"
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sha3 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
